Updating header and footer

--- a/European-Voters-Analysis.ipynb
+++ b/European-Voters-Analysis.ipynb
@@ -2,10 +2,10 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "nuclear-desire",
+   "id": "likely-marina",
    "metadata": {},
    "source": [
-    "<img title=\"GitHub Octocat\" src=\"img/Octocat.jpg\" style=\"height: 60px; padding-right: 15px\" alt=\"Octocat\" align=\"left\"> This notebook is part of a GitHub repository: https://github.com/pessini/european-voters \n",
+    "<img title=\"GitHub Octocat\" src='https://github.com/pessini/european-voters/blob/main/img/Octocat.jpg?raw=true' style='height: 60px; padding-right: 15px' alt=\"Octocat\" align=\"left\"> This notebook is part of a GitHub repository: https://github.com/pessini/european-voters \n",
     "<br>MIT Licensed\n",
     "<br>Author: Leandro Pessini"
    ]
@@ -1813,7 +1813,7 @@
    ],
    "source": [
     "# Setting Remain in variable vteurmmb as the first factor level\n",
-    "# Applying this transformation in order to use \n",
+    "# Applying this transformation in order to use Remain as 0 and Leave as 1-Default\n",
     "weighted_df_ess$variables$vteurmmb <- relevel(weighted_df_ess$variables$vteurmmb, ref=\"Remain\")\n",
     "\n",
     "str(weighted_df_ess$variables)"
@@ -1862,7 +1862,6 @@
     }
    ],
    "source": [
-    "# Creating a plot to check hyphotesis 3\n",
     "educational_profile <- data.frame(eduyrs = seq(from = 0, to = 60, by = .5))\n",
     "\n",
     "educational_profile$predicted_probs <- predict(glm_eduyears_vote, \n",
@@ -2106,10 +2105,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "comparative-fields",
+   "id": "sonic-editing",
    "metadata": {},
    "source": [
-    "<img title=\"GitHub Mark\" src=\"img/GitHub-Mark-64px.png\" style=\"height: 32px; padding-right: 15px\" alt=\"GitHub Mark\" align=\"left\"> [GitHub repository](https://github.com/pessini/european-voters) <br>Author: Leandro Pessini"
+    "<img title=\"GitHub Mark\" src=\"https://github.com/pessini/european-voters/blob/main/img/GitHub-Mark-64px.png?raw=true\" style=\"height: 32px; padding-right: 15px\" alt=\"GitHub Mark\" align=\"left\"> [GitHub repository](https://github.com/pessini/european-voters) <br>Author: Leandro Pessini"
    ]
   }
  ],
