--- a/European-Voters-Analysis.ipynb
+++ b/European-Voters-Analysis.ipynb
@@ -5,7 +5,7 @@
    "id": "likely-marina",
    "metadata": {},
    "source": [
-    "<img title=\"GitHub Octocat\" src='https://github.com/pessini/european-voters/blob/main/img/Octocat.jpg?raw=true' style='height: 60px; padding-right: 15px' alt=\"Octocat\" align=\"left\"> This notebook is part of a GitHub repository: https://github.com/pessini/european-voters \n",
+    "<img title=\"GitHub Octocat\" src='./img/Octocat.jpg?raw=true' style='height: 60px; padding-right: 15px' alt=\"Octocat\" align=\"left\"> This notebook is part of a GitHub repository: https://github.com/pessini/european-voters \n",
     "<br>MIT Licensed\n",
     "<br>Author: Leandro Pessini"
    ]
@@ -25,7 +25,7 @@
    "id": "prerequisite-wrong",
    "metadata": {},
    "source": [
-    "<img src='https://www.irishtimes.com/polopoly_fs/1.3657023.1539082433!/image/image.jpg' style='height:400px'/>"
+    "<img src='./img/brexit.jpeg' style='height:400px'/>"
    ]
   },
   {
@@ -1106,7 +1106,7 @@
    "id": "falling-guinea",
    "metadata": {},
    "source": [
-    "__Northern__ and __Southern__ are the European regions with the __highest EU rejection__ rate, each of them marking 14% of voting intentions to Leave the Brussels-based institution. \n",
+    "__Northern__ and __Southern__ are the European regions with the __highest EU rejection__ rate, each of them marking 14% voting intentions to Leave the Brussels-based institution. \n",
     "\n",
     "Curiously, those regions are also home to 4 countries that have the highest voting intention to Remain. \n",
     "\n",
@@ -1551,7 +1551,7 @@
    "source": [
     "__Latvia and Spain__ are the only EU Countries with an __unemployment__ rate higher than __40%__. More than half (14 of 22) of countries have reported an unemployment rate between 20% and 30%.\n",
     "\n",
-    "It is important to highlight that __Hungary__ presented the lowest unemployment rate of all countries studied with an unemployment rate of 13%, 8% less than the two second-better-scored countries Czechia and Slovakia. \n",
+    "It is important to highlight that __Hungary__ presented the lowest unemployment rate of all countries surveyed at 13%, 8% less than the two second-better-scored countries Czechia and Slovakia. \n",
     "\n",
     "__Did something happen in Hungary?__ In order to understand Hungary's excellent performance, online research was conducted.\n",
     "\n",
@@ -2063,7 +2063,7 @@
     "\n",
     "Also, that younger Europeans are happier than their older counterparts showing that only 9.5% of young citizens (ages 20 and younger) have a negative view of the EU.\n",
     "\n",
-    "The unemployment rate was presented higher in Southern Region where countries were more affected by the debt crisis and Hungary with a new labor program was able to lower the unemployment rate at an incredible 13%. Additionally, unemployed voters are more inclined to vote for their country to leave the EU as 40% of unhappy respondents were unemployed in comparison with 30% among happy voters.\n",
+    "The unemployment rate was presented higher in Southern Region where countries were more affected by the debt crisis and Hungary with a new labor program was able to lower the unemployment rate at an incredible 13%. Additionally, unemployed voters are more inclined to vote for their country to leave the EU as 40% of unhappy respondents were unemployed in comparison to 30% among happy voters.\n",
     "\n",
     "Union membership did not show to play an important role in influencing European voters. However, a significant discovery was possible showing that Nordic countries have the highest union density in Europe at 64%.\n",
     "\n",
